# fdb-rl-wip

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
fdb-rl/: Cargo.toml  Cargo.toml.local
fdb-rl-proto/: Cargo.toml  buf.work.yaml  build.rs
fdb-rl-proto/proto-test/fdb_rl_test/java/: README.md
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/expression_tests/v1/: expression_tests.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_no_indexes/v1/: test_no_indexes.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_no_record_types/v1/: test_no_record_types.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_no_union/v1/: test_no_union.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_no_union_evolved/v1/: test_no_union_evolved.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_no_union_evolved_illegal/v1/: test_no_union_evolved_illegal.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_no_union_evolved_renamed_type/v1/: test_no_union_evolved_renamed_type.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v1/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v2/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v3/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v4/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v5/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v6/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v7/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v8/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1/v9/: test_records_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1_evolved/v1/: test_records_1_evolved.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_1_evolved_again/v1/: test_records_1_evolved_again.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_2/v1/: test_records_2.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_3/v1/: test_records_3.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_4/v1/: test_records_4.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_4_wrapper/v1/: test_records_4_wrapper.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_5/v1/: test_records_5.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_6/v1/: test_records_6.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_7/v1/: test_records_7.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_8/v1/: test_records_8.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_bad_union_1/v1/: test_records_bad_union_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_bad_union_2/v1/: test_records_bad_union_2.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_bitmap/v1/: test_records_bitmap.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_bytes/v1/: test_records_bytes.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_chained_1/v1/: test_records_chained_1.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_chained_2/v1/: test_records_chained_2.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_datatypes/v1/: test_records_datatypes.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_double_nested/v1/: test_records_double_nested.proto
fdb-rl-proto/proto-test/fdb_rl_test/java/proto/test_records_duplicate_union_fields/v1/: test_records_duplicate_union_fields.proto
fdb-rl-proto/proto-test/fdb_rl_test/protobuf/well_formed_dynamic_message/v1/: proto_3.proto
fdb-rl-proto/proto/fdb_rl/cursor/v1/: cursor.proto
fdb-rl-proto/proto/fdb_rl/fdb_tuple_schema/v1/: fdb_tuple_schema.proto
fdb-rl-proto/proto/fdb_rl/field/v1/: field.proto
fdb-rl-proto/proto/fdb_rl/key_expression/v1/: key_expression.proto
fdb-rl-proto/proto/fdb_rl/record_metadata/v1/: record_type.proto
fdb-rl-proto/proto/fdb_rl/tuple_fields/v1/: tuple_fields.proto
fdb-rl-proto/proto/fdb_rl/tuple_schema/v1/: tuple_schema.proto
fdb-rl-proto/src/: error.rs  lib.rs
fdb-rl/avro/Continuation/KeyValueContinuation/v0/avdl/: KeyValueContinuation.avdl
fdb-rl/examples/test/cursor/KeyValueCursor/: main.rs
fdb-rl/examples/test/cursor/KeyValueCursor/Cursor-KeyValue/: next.rs
fdb-rl/examples/test/cursor/key_value_cursor/KeyValueCursorBuilder/: build_range.rs
fdb-rl/examples/test/raw_record/RawRecordCursor/Cursor-RawRecord/: next.rs
fdb-rl/examples/test/split_helper/: delete.rs  load.rs  save.rs
fdb-rl/sismic/: raw_record_forward_scan.yaml  raw_record_reverse_scan.yaml
fdb-rl/src/: error.rs  lib.rs  raw_record.rs  record_version.rs  split_helper.rs
fdb-rl/src/cursor/: continuation.rs  cursor.rs  cursor_result.rs  key_value_cursor.rs  limit_manager.rs  mod.rs
fdb-rl/src/key_expression/: error.rs  mod.rs  record_type_key_expression.rs  well_formed_message_descriptor.rs
fdb-rl/src/metadata/: error.rs  mod.rs  tuple_schema.rs
fdb-rl/src/partiql/: error.rs  fdb_rl_partiql_tuple.rs  fdb_tuple.rs  mod.rs
fdb-rl/src/protobuf/: error.rs  fdb_tuple_schema.rs  mod.rs  tuple_schema.rs  well_formed_dynamic_message.rs  well_formed_message_descriptor.rs
fdb-rl/src/range/: bytes_endpoint.rs  mod.rs  tuple_range.rs
fdb-rl/src/raw_record/: error.rs  mod.rs  primary_key.rs  scan_state_machine.rs
fdb-rl/src/scan/: mod.rs  scan_limiter.rs
fdb-rl/src/split_helper/: error.rs  mod.rs
fdb-rl/src/test/: mod.rs
fdb-rl/src/test/cursor/: mod.rs
fdb-rl/src/test/cursor/key_value_cursor/: mod.rs
fdb-rl/src/test/raw_record/: mod.rs
fdb-rl/src/test/split_helper/: mod.rs
fdb-rl/src/tuple/: mod.rs  record_tuple.rs  record_tuple_schema.rs
(+29336 files in other folders)
