[package]
name = "fdb-rl-proto"
version = "0.1.0"
edition = "2018"
rust-version = "1.49"
authors = ["fdb-rs Developers"]

description = """
FoundationDB Record Layer for Tokio Protobuf definitions
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/fdb-rs/fdb-rl-proto"
keywords = ["foundationdb", "tokio"]
categories = ["database"]

[dependencies]
bytes = "1"
prost = "0.11"
prost-reflect = "0.11"
prost-reflect-derive = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"
prost-reflect-build = "0.11"
