[package]
name = "fdb-rl-proto"
version = "0.1.0"
edition = "2018"
rust-version = "1.49"
authors = ["fdb-rs Developers"]

description = """
FoundationDB Record Layer for Tokio Protobuf definitions
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/fdb-rs/fdb-rl-proto"
keywords = ["foundationdb", "tokio"]
categories = ["database"]

[features]
default = ["fdb/fdb-7_1"]

[dependencies]
bytes = "1"
fdb = { git = "https://github.com/rajivr/fdb-wip", branch = "main" }
prost = "0.12"
prost-reflect = "0.12"
prost-reflect-derive = "0.12"
prost-types = "0.12"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.12"
prost-reflect-build = "0.12"
